--- a/style.css
+++ b/style.css
@@ -13,31 +13,47 @@ html, body{
         height: 100%;
         background-color: purple;
         background-repeat: no-repeat;
-        background-image: url(images/images6.jpeg);
+        background-image: url(images/photo-1527203561188-dae1bc1a417f);
         background-size: cover;
         position: relative;
         overflow-y: auto;
-}
+        background-position: center;
 }
 .about {
-        width: 100%;
-        height: 100%;
-        background-color: purple;
-        background-repeat: no-repeat;
-        background-image: url(images/240_F_245065140_sW7keEvTz98H35kR9XEDk68gSBeuVFBE.jpg);
-        background-size: cover;
-        position: relative;
-        overflow-y: auto;
+   width: 100%;
+   height: 100%;
+  background-color: purple;
+  background-repeat: no-repeat;
+  background-image: url(images/photo-1518601794912-1af91724e528);
+  background-size: cover;
+  position: relative;
+  overflow-y: auto;
+  background-position: top;
+  text-align: left;
+  padding-top: 50%
+
 }
 .portfolio {
         width: 100%;
         height: 100%;
         background-color: purple;
         background-repeat: no-repeat;
-        background-image: url(images/240_F_170084804_ex9gb8bd9oBDkI4GU2RxE2VDaa0LRXsw.jpg);
+        background-image: url(images/photo-1505964862204-b1eff3cc4536);
         background-size: cover;
         position: relative;
         overflow-y: auto;
+
+
+}
+.contacts {
+  width: 100%;
+  background-color: purple;
+  background-repeat: no-repeat;
+  background-image: url(images/photo-1560090628-5fa60a573240);
+  background-size: cover;
+  position: relative;
+  overflow-y: auto;
+
 }
 .nav{
         width: 150px;
@@ -79,7 +95,11 @@ html, body{
   height: 100px;
   border-radius: 50%;
 }
-
+.picture img {
+  width: 200px;
+  height: 250px;
+  border-radius: 10%;
+}
 a.active, .nav a:hover{
           background-color: black;
           color: white;
@@ -101,8 +121,8 @@ a.active, .nav a:hover{
 
 .contents {
   position: absolute;
-  bottom: 10%;
-  left: 20%;
+  bottom: 60%;
+  left: 0;
   padding: 1.5rem 2rem;
-  color: #fff;
+  color: black;
 }
