--- a/style.css
+++ b/style.css
@@ -13,32 +13,45 @@ html, body{
         height: 100%;
         background-color: purple;
         background-repeat: no-repeat;
-        background-image: url(images/photo-1527203561188-dae1bc1a417f);
+        background-image: url(images/photo-1531297484001-80022131f5a);
         background-size: cover;
         position: relative;
         overflow-y: auto;
-        background-position: center;
+
 }
 .about {
-   width: 100%;
-   height: 100%;
+  width: 100%;
+  height: 100%;
   background-color: purple;
   background-repeat: no-repeat;
-  background-image: url(images/photo-1518601794912-1af91724e528);
+  background-image: url(images/photo-1496065187959-7f07b8353c55);
   background-size: cover;
   position: relative;
   overflow-y: auto;
-  background-position: top;
-  text-align: left;
-  padding-top: 50%
+
+
+
+  }
+.skills {
+  width: 100%;
+  height: 100%;
+ background-color: black;
+ background-repeat: no-repeat;
+ background-image: url(images/);
+ background-size: cover;
+ position: relative;
+ overflow-y: auto;
+ background-position: top;
+ text-align: left;
+ padding: 0;
 
 }
 .portfolio {
         width: 100%;
         height: 100%;
-        background-color: purple;
+        background-color: black;
         background-repeat: no-repeat;
-        background-image: url(images/photo-1505964862204-b1eff3cc4536);
+        background-image: url(images/);
         background-size: cover;
         position: relative;
         overflow-y: auto;
@@ -47,37 +60,35 @@ html, body{
 }
 .contacts {
   width: 100%;
-  background-color: purple;
+  height: 100%;
+  background-color: black;
   background-repeat: no-repeat;
-  background-image: url(images/photo-1560090628-5fa60a573240);
+  background-image: url(images/photo-1480506132288-68f7705954bd);
   background-size: cover;
-  position: relative;
-  overflow-y: auto;
+  position: absolute;
+
+
 
 }
 .nav{
-        width: 150px;
-        height: auto;
-        background-color: none;
-        position: absolute;
-        top: 0;
-        right: 0;
+        width: 100%;
+        align: center;
 }
 .nav a{
          text-decoration: none;
-         font-size: 15px;
+         font-size:10px;
          font-family: verdana;
-         font-weight:bolder;
+         font-weight:bold;
 
          height: 90px;
-         margin:  5px 0;
+         margin:  10px 0;
          float: left;
-         display: inline-block;
+         display:inline-block;
          background-color: none;
          color: white;
-         line-height: 90px;
+         line-height: 50px;
          text-align: center;
-         transition: 300ms;
+         transition: 200ms;
 }
 
 .logo {
@@ -98,31 +109,64 @@ html, body{
 .picture img {
   width: 200px;
   height: 250px;
+  border-radius: 10%width: 200px;
+  height: 250px;
   border-radius: 10%;
 }
 a.active, .nav a:hover{
-          background-color: black;
-          color: white;
-          width: 100%;
+          background-color: purple;
+          color: ;white-space:normal;
+          width: 60%;
+          height: 70%;
 }
 
-.a{
-          width: 95%
-}
-.b{
-          width: 85%
-}
-.c{
-          width: 80%
-}
-.d{
-          width: 90%
-}
+
 
 .contents {
   position: absolute;
-  bottom: 60%;
+  bottom: 65%;
+  left:35%;
+  padding: 1.5rem 2rem;
+  color: white;
+}
+.words {
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  padding: 1.5rem 2rem;
+  color: white;
+  font-style:oblique;
+
+}
+.texts {
+  position: absolute;
+  top:35%;
+  right: 0;
+  padding: 1.5rem 2rem;
+  color: white;
+
+
+}
+.picture{
+  position: absolute;
+  bottom: 1%;
   left: 0;
   padding: 1.5rem 2rem;
   color: black;
+
+}
+.pic {
+    position: absolute;
+    width: 40px;
+    height: 20px;
+    top: 30px;
+    left: 30px;
+    z-index: 999;
+
+}
+.pic img {
+width: 200px;
+height: 250px;
+border-radius: 0%
+
 }
