--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body{
   height: 100%;
   background-color: purple;
   background-repeat: no-repeat;
-  background-image: url(images/photo-1496065187959-7f07b8353c55);
+  background-image: url(images/photo-1480506132288-68f7705954bd);
   background-size: cover;
   position: relative;
   overflow-y: auto;
@@ -37,7 +37,7 @@ html, body{
   height: 100%;
  background-color: black;
  background-repeat: no-repeat;
- background-image: url(images/);
+ background-image: url(images/photo-1496065187959-7f07b8353c55);
  background-size: cover;
  position: relative;
  overflow-y: auto;
@@ -51,7 +51,7 @@ html, body{
         height: 100%;
         background-color: black;
         background-repeat: no-repeat;
-        background-image: url(images/);
+        background-image: url(images/photo-1540569876033-6e5d046a1d77);
         background-size: cover;
         position: relative;
         overflow-y: auto;
@@ -91,28 +91,25 @@ html, body{
          transition: 200ms;
 }
 
-.logo {
+.photo {
   position: absolute;
   width: 40px;
   height: 20px;
-  top: 30px;
-  left: 30px;
+  top: 25%;
+  left: 10%;
   z-index: 999;
+  background-color:none;
 
 }
 
-.logo img {
-  width: 90px;
-  height: 100px;
-  border-radius: 50%;
-}
-.picture img {
-  width: 200px;
-  height: 250px;
-  border-radius: 10%width: 200px;
-  height: 250px;
+.photo img {
+  width: 350px;
+  height: 400px;
+  border-radius: 10%width: 300px;
+  height: 350px;
   border-radius: 10%;
 }
+
 a.active, .nav a:hover{
           background-color: purple;
           color: ;white-space:normal;
@@ -138,15 +135,42 @@ a.active, .nav a:hover{
   font-style:oblique;
 
 }
-.texts {
+.notes {
   position: absolute;
-  top:35%;
-  right: 0;
+  bottom: 35%;
+  left: 20%;
+  padding: 1.5rem 2rem;
+  color: white;
+  font-style:normal;
+
+}
+.amagama {
+  position: absolute;
+  bottom: 25%;
+  right: 10%;
   padding: 1.5rem 2rem;
   color: white;
 
 
 }
+.texts {
+  position: absolute;
+  top:15%;
+  left:30%;
+  padding: 1.5rem 2rem;
+  color: white;
+
+
+}
+.icons {
+  position:absolute;
+  bottom:0;
+  left:45%;
+  padding: 1.5rem 2rem;
+  color: white;
+
+  }
+
 .picture{
   position: absolute;
   bottom: 1%;
@@ -169,4 +193,42 @@ width: 200px;
 height: 250px;
 border-radius: 0%
 
+}
+.lead {
+  position:absolute;
+  bottom:5%;
+  left:30%;
+  padding: 1.5rem 2rem;
+  color: white;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+
+.container{
+  position:absolute;
+  bottom:15%;
+  left:30%;
+  padding: 1.5rem 2rem;
+  color: white;
+
+}
+input[type=text], select, textarea {
+  width: 50%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
